[package]
name = "render-cli"
authors = ["Kurt Wolf <kurtwolfbuilds@gmail.com>"]
description = "Command line actions for Render.com"
license = "MIT"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "render"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
clap = { version = "3.0.0-rc.4", features = ["derive"] }
reqwest = {version = "0.11.7", features = ["blocking", "json"]}
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.72"
