[package]
name = "render-cli"
authors = ["Kurt Wolf <kurtwolfbuilds@gmail.com>"]
description = "Command line actions for Render.com"
license = "MIT"
version = "0.6.12"
edition = "2021"

[[bin]]
name = "render"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
clap = { version = "3", features = ["derive", "env"] }
colored = "2.0.0"
futures = "0.3.21"
http = "0.2.6"
httpclient = "0.1.12"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.72"
slice-group-by = "0.3.0"
tabular = "0.2.0"
tokio = { version = "1.17.0", features = ["full"] }
